<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textSize="25sp"
        android:textColor="@color/black"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:layout_marginLeft ="10dp"
        android:layout_marginRight ="10dp"
        android:id="@+id/textEmailReg"/>

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:inputType="textEmailAddress"
        android:layout_marginLeft ="10dp"
        android:layout_marginRight ="10dp"
        android:hint="@string/prompt_email"
        android:layout_below="@+id/textEmailReg"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft ="10dp"
        android:layout_marginRight ="10dp"
        android:inputType="textPassword"
        android:hint="@string/prompt_password"
        android:layout_below="@+id/email"/>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:layout_marginLeft ="10dp"
        android:layout_marginRight ="10dp"
        android:layout_below="@+id/password"
        android:text="@string/login"
        android:textColor="#ffffff"
        android:textSize="17sp"
        android:textStyle="bold"
        android:background="@color/colorPrimary"/>

    <Button
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:layout_marginLeft ="10dp"
        android:layout_marginRight ="10dp"
        android:layout_below="@+id/btn_login"
        android:text="@string/register"
        android:textColor="#ffffff"
        android:textSize="17sp"
        android:textStyle="bold"
        android:background="@color/colorPrimary"/>

</RelativeLayout>